Retrieve monthly receipts

--- a/app/src/main/res/layout/monthly_chart_fragment.xml
+++ b/app/src/main/res/layout/monthly_chart_fragment.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".MonthlyChartFragment">
 
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -17,7 +18,16 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <TextView
+            android:id="@+id/monthlyReceipts"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="asa"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/chartId" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
