--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,14 +41,14 @@
                         android:layout_height="wrap_content"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:srcCompat="@drawable/ic_baseline_account_balance_wallet_24" />
+                        app:srcCompat="@drawable/green_rectangle2" />
 
                     <TextView
                         android:id="@+id/moneyIn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/roboto_condensed_bold"
-                        android:text="Money in"
+                        android:text="Income"
                         android:textSize="14sp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/greenRect" />
@@ -59,7 +59,7 @@
                         android:layout_height="wrap_content"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:srcCompat="@drawable/ic_baseline_account_balance_wallet_24" />
+                        app:srcCompat="@drawable/red_rectangle2" />
 
                     <TextView
                         android:id="@+id/moneyOut"
@@ -67,7 +67,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
                         android:fontFamily="@font/roboto_condensed_bold"
-                        android:text="Money out"
+                        android:text="Expense"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/redRect" />
 
