--- a/app/src/main/res/layout/sms_receipt_item_view.xml
+++ b/app/src/main/res/layout/sms_receipt_item_view.xml
@@ -85,7 +85,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/dayTextView" />
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/arrowImage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
