--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -181,6 +181,15 @@
                         app:layout_constraintTop_toBottomOf="@+id/recentReceiptsTextView"
                         tools:layout="@layout/fragment_sms_receipts"
                         tools:visibility="visible" />
+
+                    <TextView
+                        android:id="@+id/testTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="TextView"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/recentReceiptsTextView"
+                        app:layout_constraintTop_toTopOf="parent" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
             </androidx.cardview.widget.CardView>
@@ -207,27 +216,16 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
-                    <com.google.android.material.chip.Chip
-                        android:id="@+id/monthChip"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="57dp"
-                        android:text="Month"
-                        app:layout_constraintStart_toEndOf="@+id/yearChip"
-                        app:layout_constraintTop_toTopOf="parent" />
-
                     <androidx.fragment.app.FragmentContainerView
                         android:id="@+id/pieFragment"
                         android:name="com.anthonyangatia.mobilemoneyanalyzer.piechart.PieFragment"
                         android:layout_width="397dp"
                         android:layout_height="0dp"
                         android:layout_marginStart="8dp"
-                        android:layout_marginTop="16dp"
                         android:layout_marginEnd="8dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/monthChip"
                         tools:layout="@layout/pie_fragment" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
