Bar chart created

--- a/app/src/main/res/layout/monthly_chart_fragment.xml
+++ b/app/src/main/res/layout/monthly_chart_fragment.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
             name="monthlyChartFragment"
-            type="com.anthonyangatia.mobilemoneyanalyzer.linechart.MonthlyChartViewModel" />
+            type="com.anthonyangatia.mobilemoneyanalyzer.linechart.BarChartViewModel" />
     </data>
 
 <FrameLayout
