--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,8 @@
     <color name="light_blue_700">#0288D1</color>
     <color name="light_blue_200">#81D4FA</color>
 
+<!--    cutom colors-->
+    <color name="indigo">#4953CF</color>
 
 
 
