--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,12 +13,12 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
 <!--        Primary-->
-        <item name="colorPrimary">@color/blue_500</item>
-        <item name="colorPrimaryVariant">@color/blue_700</item>
+        <item name="colorPrimary">@color/indigo</item>
+        <item name="colorPrimaryVariant">@color/indigo</item>
         <item name="colorOnPrimary">@color/white</item>
 <!--        Secondary-->
-        <item name="colorSecondary">@color/light_blue_200</item>
-        <item name="colorSecondaryVariant">@color/light_blue_700</item>
+        <item name="colorSecondary">@color/indigo</item>
+        <item name="colorSecondaryVariant">@color/indigo</item>
         <item name="colorOnSecondary">@color/black</item>
 
     </style>
