Home page updates

--- a/app/src/main/res/layout/bar_chart_fragment.xml
+++ b/app/src/main/res/layout/bar_chart_fragment.xml
@@ -20,6 +20,7 @@
             android:layout_height="wrap_content"
             android:entries="@array/testArray"
             android:minHeight="32dp"
+            android:padding="4dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -29,6 +30,8 @@
             android:id="@+id/barChart"
             android:layout_width="match_parent"
             android:layout_height="250dp"
+            android:layout_marginTop="4dp"
+            android:padding="4dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
