--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,5 +25,15 @@
         <item name="fontFamily">@font/roboto_black</item>
         <item name="android:textSize">12sp</item>
     </style>
+    <style name="IndigoRobotoBlack14" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@color/indigo</item>
+        <item name="fontFamily">@font/roboto_black</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+    <style name="IndigoRobotoBold14" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@color/indigo</item>
+        <item name="fontFamily">@font/roboto_bold</item>
+        <item name="android:textSize">14sp</item>
+    </style>
 
 </resources>
