--- a/app/src/main/res/layout/compare_fragment.xml
+++ b/app/src/main/res/layout/compare_fragment.xml
@@ -168,28 +168,14 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
-    <androidx.appcompat.widget.SearchView
-        android:id="@+id/searchViewComparison"
-        android:layout_width="0dp"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragmentPersonList"
+        android:name="com.anthonyangatia.mobilemoneyanalyzer.ui.settings.PersonListFragment"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/blue_700"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/compareCard"
-        tools:visibility="visible" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/personSearchListCompare"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="4dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/searchViewComparison"
-        tools:listitem="@layout/item_view_person" />
-
-
+        tools:layout="@layout/person_list_fragment" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
