--- a/app/src/main/res/layout/item_view_sms_receipt.xml
+++ b/app/src/main/res/layout/item_view_sms_receipt.xml
@@ -28,6 +28,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
+                android:fontFamily="@font/roboto"
                 android:text="Anthony Angatia"
                 android:textSize="12sp"
                 app:layout_constraintStart_toEndOf="@+id/textView"
@@ -37,6 +38,7 @@
                 android:id="@+id/dayTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/roboto"
                 android:text="Mon 15"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -60,15 +62,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
+                android:text="0791278088"
                 android:textSize="12sp"
                 app:layout_constraintStart_toStartOf="@+id/nameTextView"
-                app:layout_constraintTop_toBottomOf="@+id/nameTextView" />
+                app:layout_constraintTop_toBottomOf="@+id/nameTextView"
+                tools:text="0791278088" />
 
             <TextView
                 android:id="@+id/amountTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
+                android:fontFamily="@font/roboto"
                 android:text="Kshs 100,000"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toStartOf="@+id/dayTextView"
@@ -78,6 +83,7 @@
                 android:id="@+id/timeTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/roboto"
                 android:text="9:45pm"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="@+id/dayTextView"
