--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,6 +22,9 @@
         <action
             android:id="@+id/action_navigation_settings_to_personListFragment"
             app:destination="@id/personListFragment" />
+        <action
+            android:id="@+id/action_navigation_settings_to_navigation_search"
+            app:destination="@id/navigation_search" />
     </fragment>
 
     <fragment
@@ -33,7 +36,11 @@
         android:id="@+id/navigation_search"
         android:name="com.anthonyangatia.mobilemoneyanalyzer.ui.search.SearchFragment"
         android:label="search_fragment"
-        tools:layout="@layout/search_fragment" />
+        tools:layout="@layout/search_fragment" >
+        <action
+            android:id="@+id/action_navigation_search_to_classifyFragment"
+            app:destination="@id/classifyFragment" />
+    </fragment>
     <fragment
         android:id="@+id/compareFragment"
         android:name="com.anthonyangatia.mobilemoneyanalyzer.ui.settings.compare.CompareFragment"
@@ -52,5 +59,17 @@
         android:id="@+id/personDetailFragment"
         android:name="com.anthonyangatia.mobilemoneyanalyzer.ui.settings.target.PersonDetailFragment"
         android:label="fragment_person_detail"
-        tools:layout="@layout/fragment_person_detail" />
+        tools:layout="@layout/fragment_person_detail" >
+        <argument android:name="phoneNumber"
+            app:argType="string" />
+    </fragment>
+    <fragment
+        android:id="@+id/classifyFragment"
+        android:name="com.anthonyangatia.mobilemoneyanalyzer.ui.settings.classify.ClassifyFragment"
+        android:label="classify_fragment"
+        tools:layout="@layout/classify_fragment" >
+        <argument
+            android:name="receipt_id"
+            app:argType="long" />
+    </fragment>
 </navigation>
