Restructure and classify updated

--- a/app/src/main/res/layout/item_view_person.xml
+++ b/app/src/main/res/layout/item_view_person.xml
@@ -8,7 +8,7 @@
     <data>
         <variable
             name="person"
-            type="com.anthonyangatia.mobilemoneyanalyzer.database.Person"/>
+            type="com.anthonyangatia.mobilemoneyanalyzer.database.PersonAndBusiness"/>
 
     </data>
 
