--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -60,7 +60,7 @@
         android:name="com.anthonyangatia.mobilemoneyanalyzer.ui.settings.target.PersonDetailFragment"
         android:label="fragment_person_detail"
         tools:layout="@layout/fragment_person_detail" >
-        <argument android:name="phoneNumber"
+        <argument android:name="name"
             app:argType="string" />
     </fragment>
     <fragment
